[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/DetectCircle.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.4169, 30.8055 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="Tower" parent="." instance=ExtResource( 2 )]

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AreaDetection" type="Area2D" parent="."]

[node name="AreaRadius" type="CollisionShape2D" parent="AreaDetection"]
shape = SubResource( 2 )

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DetectCircle" type="Node2D" parent="."]
script = ExtResource( 3 )
